samples/_failures_safe/1761541636_0c5d97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b70a5c7a.c: In function ‘main’:
./samples/SAFE/__tmp_b70a5c7a.c:165:12: error: missing terminating " character
  165 |     printf("Tokens:\
      |            ^~~~~~~~~
./samples/SAFE/__tmp_b70a5c7a.c:165:5: error: expected expression at end of input
  165 |     printf("Tokens:\
      |     ^~~~~~
./samples/SAFE/__tmp_b70a5c7a.c:165:5: error: expected declaration or statement at end of input
